--- a/templates/gems/new.erb
+++ b/templates/gems/new.erb
@@ -1,1 +1,23 @@
-form for new gem
+<% @title = "New gemstone | TGDB" %>
+
+<form class="form-horizontal" action="/gems" method="post">
+  <div class="form-group">
+    <label for="name" class="col-sm-2 control-label">Gemstone</label>
+    <div class="col-sm-10">
+      <input type="text" id="name" name="gemstone[name]" value="<%= "#{@gemstone.name}" %>">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="description" class="col-sm-2 control-label">Description</label>
+    <div class="col-sm-10">
+      <textarea rows="4" id="description" name="gemstone[description]" value="<%= "#{@gemstone.description}" %>"></textarea>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
+</form>
