--- a/templates/gems/edit.erb
+++ b/templates/gems/edit.erb
@@ -1,6 +1,8 @@
-<% @title = "New gemstone | TGDB" %>
+<% @title = "Editing #{@gemstone.name} | TGDB" %>
 
-<form class="form-horizontal" action="/gems" method="post">
+<form class="form-horizontal" action="<%= "/gems/#{@gemstone.id}" %>" method="post">
+  <input type="hidden" name="_method" value="put">
+
   <div class="form-group">
     <label for="name" class="col-sm-2 control-label">Gemstone</label>
     <div class="col-sm-10">
@@ -17,7 +19,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Store</button>
+      <button type="submit" class="btn btn-default">Update</button>
     </div>
   </div>
 </form>
