--- a/templates/gems/index.erb
+++ b/templates/gems/index.erb
@@ -1,5 +1,9 @@
-<ul>
-  <% @gems.each do |g| %>
-    <li><a href="<%= "/gems/#{g.id}" %>"><%= g.name %></a></li>
-  <% end %>
-</ul>
+<% @gems.each do |g| %>
+  <div class="gemstone">
+    <span class="gemstone--name">
+      <%= g.name %>
+    </span>
+    <a href="<%= "/gems/#{g.id}/edit" %>" class="btn btn-default btn-sm">Edit</a>
+    <a href="#" class="btn btn-danger btn-sm">Delete</a>
+  </div>
+<% end %>
