--- a/templates/gems/index.erb
+++ b/templates/gems/index.erb
@@ -4,6 +4,9 @@
       <%= g.name %>
     </span>
     <a href="<%= "/gems/#{g.id}/edit" %>" class="btn btn-default btn-sm">Edit</a>
-    <a href="#" class="btn btn-danger btn-sm">Delete</a>
+    <form class="delete" action="<%= "/gems/#{g.id}" %>" method="post">
+      <input type="hidden" name="_method" value="delete">
+      <input type="submit" class="btn btn-danger btn-sm" value="Delete">
+    </form>
   </div>
 <% end %>
