refactoring all around

--- a/templates/gemstones/edit.erb
+++ b/templates/gemstones/edit.erb
@@ -1,6 +1,6 @@
 <% @title = "Editing #{@gemstone.name} | TGDB" %>
 
-<form class="form-horizontal" action="<%= "/gems/#{@gemstone.id}" %>" method="post">
+<form class="form-horizontal" action="<%= "/gemstones/#{@gemstone.id}" %>" method="post">
   <input type="hidden" name="_method" value="put">
 
   <div class="form-group">
