--- a/templates/gemstones/new.erb
+++ b/templates/gemstones/new.erb
@@ -1,6 +1,6 @@
 <% @title = "New gemstone | TGDB" %>
 
-<form class="form-horizontal" action="/gems" method="post">
+<form class="form-horizontal" action="/gemstones" method="post">
   <div class="form-group">
     <label for="name" class="col-sm-2 control-label">Gemstone</label>
     <div class="col-sm-10">
