--- a/templates/index.erb
+++ b/templates/index.erb
@@ -1,5 +1,6 @@
 <h1>Welcome to The Gems DB</h1>
 <h3>We'll show you what gem you should put in your wife's finger</h3>
 <div class="warm-welcome">
-  For a warm welcome, please check <a href="/hello">here</a>.
+  For a warm welcome, please check <a href="/hello/world">here</a>.
+  For a list of gems, please go <a href="/gemstones/">here</a>.
 </div>
